--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,5 +28,8 @@
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "pg-promise": "^10.10.1"
   }
 }
