--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "test:ci": "npm test -- --coverage"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
@@ -31,6 +32,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg-promise": "^10.10.1"
