--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "pg-promise": "^10.10.1"
+    "pg-promise": "^10.10.1",
+    "uuidv4": "^6.2.7"
   }
 }
