--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,14 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "pg-promise": "^10.10.1",
+    "uuidv4": "^6.2.7"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -30,12 +38,5 @@
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "pg-promise": "^10.10.1",
-    "uuidv4": "^6.2.7"
   }
 }
