chore: adiciona no-underscore-dangle: off

--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -24,6 +24,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "no-underscore-dangle": "off",
     "camelcase":"off",
     "arrow-parens": "error",
     "no-useless-constructor": "off",
