--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,9 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
+  "_moduleAliases": {
+    "@": "src"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,6 +22,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg-promise": "^10.10.1",
+    "reflect-metadata": "^0.1.13",
     "uuidv4": "^6.2.7"
   },
   "devDependencies": {
