--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,8 @@
     "test:unit": "npm test -- --watch -c jest-unit.config.js",
     "test:integration": "npm test -- --watch -c jest-integration.config.js",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "_moduleAliases": {
     "@": "src"
@@ -23,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "pg-promise": "^10.10.1",
     "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32",
     "uuidv4": "^6.2.7"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
