chore: adiciona arrow-parens: off

--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -26,9 +26,10 @@
     "prettier/prettier": "error",
     "no-underscore-dangle": "off",
     "@typescript-eslint/no-empty-function": "off",
-    "camelcase":"off",
-    "arrow-parens": "error",
+    "arrow-parens": "off",
+    "camelcase": "off",
     "no-useless-constructor": "off",
+    "no-return-assign": "off",
     "class-methods-use-this": "off",
     "lines-between-class-members": "off",
     "import/prefer-default-export": "off",
