--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.6.0",
     "pg-promise": "^10.10.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
@@ -43,7 +45,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
