--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -1,6 +1,10 @@
 {
-  "type": "sqlite",
-  "database": "./src/database/database.sqlite",
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5434,
+  "username": "postgres",
+  "password": "docker",
+  "database": "caleventos",
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
