--- a/packages/client/web/.eslintrc.json
+++ b/packages/client/web/.eslintrc.json
@@ -28,6 +28,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
+    "no-alert": "off",
     "react/require-default-props": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "react/prop-types": "off",
