--- a/packages/client/web/package.json
+++ b/packages/client/web/package.json
@@ -14,11 +14,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/react-input-mask": "^3.0.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
