--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "fastify": "^4.11.0"
   }
 }
