--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,13 @@
   "author": "Maurício Romagnoli <x0n4d0>",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
     "fastify": "^4.11.0"
+  },
+  "devDependencies": {
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4"
   }
 }
