--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "fastify": "^4.11.0"
   },
   "devDependencies": {
