--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "fastify": "^4.11.0"
+    "fastify": "^4.11.0",
+    "prisma": "^4.8.1"
   },
   "devDependencies": {
+    "@prisma/client": "^4.8.1",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
