--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "migrate:dev": "npx prisma migrate dev",
-    "prisma:studio": "npx prisma studio"
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate:erd": "npx prisma generate"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
@@ -17,7 +18,9 @@
     "prisma": "^4.8.1"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "@prisma/client": "^4.8.1",
+    "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
