feat(server): add create new habit and days info routes

--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "dayjs": "^1.11.7",
     "fastify": "^4.11.0",
-    "prisma": "^4.8.1"
+    "prisma": "^4.8.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
